# TradeNexus

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  data_manager.py  docker-compose.yml  indicators.py  mtf_engine.py  notifier.py  pyproject.toml  requirements.txt  ui_components.py
.github/workflows/: ci.yml
scripts/: release_check.py
src/tradenexus/: app_entry.py
src/tradenexus/alerts/: discord.py  dispatcher.py  formatters.py  telegram.py
tests/: test_advanced_smc.py  test_alert_dedup.py  test_alert_health.py  test_app_entrypoint.py  test_backtest_metrics.py  test_brief_ui_helpers.py  test_chart_overlay_signature.py  test_closed_candle_guard.py  test_compliance_engine.py  test_compliance_export.py  test_compliance_models.py  test_compliance_preset_integration.py  test_compliance_score.py  test_compliance_ui_helpers.py  test_compliance_workspace_isolation.py  test_config_validation.py  test_correlation_risk.py  test_data_cache.py  test_data_fetch_result.py  test_data_quality_blocks_entry.py  test_db_integrity.py  test_db_migrations.py  test_decision_brief.py  test_decision_pipeline_regime_rules.py  test_decision_states.py  test_deployment_config.py  test_dockerignore_rules.py  test_env_validation.py  test_final_holdout.py  test_health_checks.py  test_indicator_stability.py  test_invalidation.py  test_journal_export_pagination.py  test_market_regime.py  test_mtf_hierarchy.py  test_no_lookahead.py  test_ohlcv_schema_normalization.py  test_optimization_costs.py  test_optimization_repository.py  test_optimization_reproducibility.py  (+46 more)
(+102 files in other folders)
