[project]
name = "tradenexus"
version = "1.0.0"
description = "TradeNexus Pro multi-indicator decision support system"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "streamlit",
    "pandas",
    "pandas-ta-classic",
    "yfinance",
    "plotly",
    "requests"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
